fix 46: Spacing of month text elements
Fixes: https://github.com/toni-sharpe/brainstem-research/issues/46

--- a/gui/src/components/MonthText/MonthText.scss
+++ b/gui/src/components/MonthText/MonthText.scss
@@ -1,4 +1,7 @@
 .month-text {
   flex-wrap: wrap;
-  white-space: nowrap;
+  &__elem {
+    margin-bottom: var(--spacing--narrowest);
+    white-space: nowrap;
+  }
 }
