--- a/gui/src/components/SumOutput/SumOutput.scss
+++ b/gui/src/components/SumOutput/SumOutput.scss
@@ -5,7 +5,6 @@
     color: var(--white);
     font-weight: bold;
     padding: var(--padding--small-tiny);
-    margin-bottom: var(--spacing--narrowest);
   }
   &__total {
     background-color: var(--blue--dark);
